Fix alignment of picture

--- a/packages/visitry-mobile/client/users/profile.less
+++ b/packages/visitry-mobile/client/users/profile.less
@@ -13,17 +13,12 @@
   background-size: auto 100%;
 }
 .profile-picture.has-picture {
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  background-color: #F8F8F8;
-  text-align: center;
-  color: #ccc;
-  background-position: center center;
-  background-size: auto 100%;
+  background-color: #0c60ee;
   .item-avatar > img:first-child {
     max-width: 200px;
     max-height: 200px;
+    top:0;
+    left:0;
   }
 }
 
